ECR-and-jenkins-provisioning/terraform/modules/SECGRP/main.tf
# create all security groups dynamically
resource "aws_security_group" "jenkins-sg" {
  vpc_id      = var.vpc_id
  name        = "jenkins-sg"
  description = "sec group for jenkins http access"
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "jenkins-sg"
  }
}
